@@ -4,16 +4,18 @@ AUX gitlab-ce-8.9.1-fix-redis-config-path.patch 411 SHA256 d88b8c4d4dcc30d7533bc
 AUX gitlab-mailroom.service 773 SHA256 39cea460db7fc505b136a2106902d0515890180e74913bf364aa499368fc5f2e SHA512 f82c63a180add1103e2bd115e67826ad7362a844991ef16f1de7fc6c78bf1955155ecf278fc0d759e674ab85736f3ba2a6650d00e9b3ce683316875efd9efa3c WHIRLPOOL 683c67b12f9666d1c1df5ec61e0072acaecd3aff43d0ff475037e178bc58fd9036ae6d8cd45e922098c842abd057231afd4767ce229d4581356f153b48a06208
 AUX gitlab-sidekiq.init 989 SHA256 72f9acb269b2e60f7571b2c658f7f29e9c36c6987c9fc8f1d02b9a1bae8ba747 SHA512 cc6ab63f238507bb4a66f48f8df487a8c493afc0e0433ed82c09a7b6dec984a45f465c526cf7be70f485222607af0baa04e7057183f16badcf04950b43fc02f8 WHIRLPOOL 0cda6727f0f0a7a15eb4476c9d651fb5aa6f7ccf9c23a24d040576309c8a30aa6e1790974c82de9656f316c2d9beaf0d1fdd100cab1b7ac7f8cebf2079a13dbe
 AUX gitlab-sidekiq.service 1066 SHA256 b9a15ee7498cc5ebecfd51a037ab1e32e66723a1612d5ce9365eefd890b5670e SHA512 33ece22389637b7b4591f4dceedb488fb43a92ca47facb19432f87772bbbf1774d4fb737ace52a6d55533c9e291e343dc56971c6f70fed285a10429d6d97d318 WHIRLPOOL b5a81751b8317bb9244018f9ed82f9793734adbad9983c244429a33d710169eeeed25cdf868d724032866d83bb9676ccbbf616b53363491e15a80e474443f331
-AUX gitlab-unicorn.init 2553 SHA256 9f6d3276d52589a5224c1a9b5a117a0d5d3e83317d756c80de11a5b5d4d45a9d SHA512 2f980ba6206b8e181fa438585630c2c08e5d6ef5596369affe8129b6630c89a43e68529b9a25d03fae6fa5c0fbd29c415570257d1ae92760c2c1f8be1cdf8629 WHIRLPOOL a7f7f26500639a3880b0b5c0ccae88dfdde66bafd6a5cf908787162419fff13ec6a0aee2a179f60ae3e0345ae48e4b7468c49e0872e47c3d9ea91eed3caadc0c
+AUX gitlab-unicorn.init 3126 SHA256 124354df8a929ae5b9df4f044c46684758a585ddc703b858df77f3174507de7e SHA512 80ac72fc19f87b02209a159a966bfa3f7467a03d3119f9ca4f2978e185deaf2bdbdab2f429c4c47edabd8e534ddb58e90b6e3e5fc31812a94f7207ffebaa6bbb WHIRLPOOL fd5e4203c49999a02f367c32b981ddbd575a340af45ee84b7b3c4afcfea74c40cd43925cdd474006b96f76fc98b9d3190431d2fb2397d1a2aa0267b67b707db2
 AUX gitlab-unicorn.service 773 SHA256 010c9e223a30400d9155b39499eb0d7efad23b66baab9fcd9e365c689086b9bd SHA512 0bf9630aa91ed8f590a7bfa42d09b7ba33f6342b43b3d191c792c11157f8926c2a2ac2390eebd8179637e29b5bf68233d4699d62463497a0fd45b9bdbdd9167b WHIRLPOOL fbc709a5550dcc548a35c22c812dafe52ee507f5678b57c22c709ee89a399ae9109e2f56b7a13135d4140f1e024ebc4effe4aa4de13e0f36691da2a0737d9792
 AUX gitlab-workhorse.service 930 SHA256 09348a52fec333b4b19828752e0484400c1efa9dfb644723fcf8e80537e294b6 SHA512 6332024fe0049287899cf482b6e4439e9dd90da14e489d08aa8e5e79cb7872efcc517d99b69fa23b011b382acb1e5926496a78f08af5d2d64daa515b869a0c6a WHIRLPOOL 3749c6719b2a35c7de29763cd616e1e9cc30a85aa1630ffc46440334459b5922503d52629556c125a6dd6574bdc5f23f1b2a7f2a85e2270a415b22246e0b6bae
 AUX gitlab.conf 27 SHA256 cd9be088bbb67a5400407fc6f63c061eb224f16748b7d0812ff2c101f43ca263 SHA512 909c49fee6d050c1e94b2559ff2a9d54c5c346492be0e2920b50d56d69eaddbed67e3ac12e012d2a9601b5596640ebf33c8dc68fc588a03ca370d963294be37f WHIRLPOOL fa436e8d7d2643d450259d26b6e7b24dae69df47ed22e5ef2a567f37aa785fbf3b0eb1129ae7c8bf8986c29559fc3b744a34064375e5245dce2b10053cd715d9
 DIST gitlab-ce-8.8.5.tar.gz 18478664 SHA256 385fefd73ea70797ee2b1d9084c0b5a0f90917a7636926537746bd86143e0335 SHA512 9fef95ecabc16fd441b81ca107567d7ff5abfde39bbfe23b777b0ca1e11cb0bb3028cb597a04c31b478e06fb2f91bd635fc4484ee01d44b4856e528d5eea328c WHIRLPOOL 8a010f2dfc635c87dc3434daae60c0f5965cccb98fd37672ccb772c5baaf2cfe1e232fa1dd21e612d6d08f409714e79e879c46ea28a0e2fe24198308f280b34a
 DIST gitlab-ce-8.9.1.tar.gz 21151788 SHA256 f93c32ea9c79e80f705afc3b008cfc52b29cbd9de07b6b2b6dd3c5c4338ae0c6 SHA512 2409469acc91da52a04ad4f733ece019fedd94051ba02c48c508c6a9784e51f484b15d9b18c84d12c58e1b3cfe5998315005bc037aac4b228ea0376699ba6243 WHIRLPOOL fd479b7e0c1c6f4e7f54625154f619cdb7cc86739a79f5a196a716799504be0b1d59a5fb15353d74b13269d2e41ca1e3dcad5e36e83a7384875ab2a772ee43df
 DIST gitlab-ce-8.9.2.tar.gz 21152737 SHA256 f1da983b827297ed45ee859293e9abd1b2da401e5c02d4d94deb08971cc019a9 SHA512 dd9fe895a3a9590b8c22fd158c6909b3abe4652721e1defe5dc6ab529fca9954e15b6e0c11be21f2a3a047b43188a23b7b7d75830808f4283838631fcc910b8e WHIRLPOOL 4570ed68e7918ec2cf149bed6fbe551d7e5a3e74e4a7334038f66d3970b77569d16f514ff6aa34f1e0fadf40e474f572e34cda5515e57fb410d46b069c6bfd83
+DIST gitlab-ce-8.9.3.tar.gz 21156182 SHA256 39578df8b98113bbe79f49d1435d9c399729e9b0d42062a60c8d8c11d1fe056b SHA512 e03b448da007145a8869813e39ceb96f3209b5ab79cc1eee06bdfdb8c85392fdb7a7d5bf3c957fb9d55be93ee6f35945e88747ca1770d566dd4a55cdb0170149 WHIRLPOOL c390be29b4da63f222d22e667baa9876cdbba3d0d1d9d3aa22783355dd1989b2f2bb3692e6c17094444518e36bb0e87b972484c7afc3af132ddc3c536aebcaf9
 EBUILD gitlab-ce-8.8.5.ebuild 12342 SHA256 0b528722bb3bc7d232dc6a272973bf8da77992fefa308dabf4b7a9fba8548c18 SHA512 430ee8b469bf43bd8889e9375c49ca83a35d2956c6964e0f1dd07921fbb124a8d7decf60950fbbbc836025d74e73da1e7c89119da2348090d163eb6062739fb4 WHIRLPOOL 3730bf6b32dbc0c3605b15a953114aca56faf859f83672f05ad0b92251697a9cc0778b13d3ba3fd25ddb0858e8ce43b400573f68a605e063ad9bed8597c29fc5
 EBUILD gitlab-ce-8.9.1.ebuild 12336 SHA256 d50f5bb06b8fd2082804e096d372d0caca441d5d24d30a5ab3fdbd78d7cf5aa2 SHA512 91a88f5342bdd9736f9e45ccbd690caf50c51eabd327c419aaca4203d65ab37ce562214d59280a073c0945945bd60d6f523ebb6586cec09a91b9fca16a3f0412 WHIRLPOOL 67ab639a78899f8161ee47f07d983e7bc90442348170b36c873b94475fcd11a0799c89fecfc1f7a3e21fc95b553ffbee23655d3d1fb1368dd83b66de46652bd5
 EBUILD gitlab-ce-8.9.2.ebuild 12343 SHA256 504ae1facfdd479f79d8b1b03cf2a8695f55b9a653923c4c75bf7ede96d5eba0 SHA512 9a59ae1aaa358d94eb1548d940fb6ac100f38387f5f1d70b8798f6ac7d820317575e7e4f018a81c3a1a8a6b7ae8450625fcd0b1f7316f21e93a2e3936ae82236 WHIRLPOOL 5800a3894693f8152778508119f87011c5fe25b6e90f7d930208b0e68aac48ed90ef3a5be86a6c87198d8bd7ac440c8f08d79d525ab3f13d32a0c79e63e95aa0
+EBUILD gitlab-ce-8.9.3.ebuild 12343 SHA256 504ae1facfdd479f79d8b1b03cf2a8695f55b9a653923c4c75bf7ede96d5eba0 SHA512 9a59ae1aaa358d94eb1548d940fb6ac100f38387f5f1d70b8798f6ac7d820317575e7e4f018a81c3a1a8a6b7ae8450625fcd0b1f7316f21e93a2e3936ae82236 WHIRLPOOL 5800a3894693f8152778508119f87011c5fe25b6e90f7d930208b0e68aac48ed90ef3a5be86a6c87198d8bd7ac440c8f08d79d525ab3f13d32a0c79e63e95aa0
 EBUILD gitlab-ce-9999.ebuild 12347 SHA256 b7850042b023eb505544b47fcf8896bc0319ce96808d29b462d527aacb25d6c0 SHA512 2fc140d00fde6e248ea7cba17ce6e0243dcdad76c497d052a9bac5abdb6618b27ee2a1cbeb86aa5f4718688746abf1be499830af2fea848aec63ec870f4fa72a WHIRLPOOL 7f2de913692b0d363cc8f24a152302de2feaa70db97069049c3c15515b76da330dbbb11ce868f6d59e22e2c1fd5c7ef3874197d2bc5eb36b60e52056a02dd028
-MISC ChangeLog 1178 SHA256 33f13c79845e93ae46aec51d70ab2e1b81e22430a7c4e038afb5b1cc99358c29 SHA512 98ed5b31705e889f0134c31e6fbb6f3a28d57906319ebfeac8e9cb0d53661a1517d5b23b8ecf99ac44b2e6ce85ebbe7cc69e3738d1ae91b77e9194044a1ed85a WHIRLPOOL af3aee12d1f827ebb7050ceffd3eb801f2bd5be56aae63bdbfecef40d47fa2dd85ba4d46b4b5ce440d9815d22f5009acfc0020bb753f67a1bc1f0e0692951b4b
+MISC ChangeLog 1444 SHA256 7840a25e024a5a581e4df38d7a4cd9573f89611f273fae73412546848ee0f9ca SHA512 96984ee7394d70896422377b380d8499e6ba911b365f3af413726bbfc4e78865af8a590b54c4cee35f1ce429cc93ded67e911d1cf48ff2a0f739a05bc52a424a WHIRLPOOL 819ab80702fffb93fe64bcb2f1fb33378d8d1a717ad5c6a2be487f41faf3e822a22de38b42e3cc767d54b6ad57b9b9f59287fbfa3775004bca77fcd0a9acb1b2
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
