@@ -1,3 +1,10 @@
+*gitlab-ce-8.9.3 (01 Jul 2016)
+
+  01 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.3.ebuild,
+  files/gitlab-unicorn.init:
+  www-apps/gitlab-ce:  added ebuild for version 8.9.3 and updated init script.
+  now, individual restart of sidekiq is possible
+
 *gitlab-ce-8.9.2 (28 Jun 2016)
 
   28 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.2.ebuild:
